# AndroidRemouteSpeakerForWindows

./: .editorconfig  .gitignore  README.md  task.txt
android/: build.gradle.kts  local.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  opus_bridge.cpp
android/app/src/main/java/com/audiobridge/app/: MainActivity.kt
android/app/src/main/java/com/audiobridge/app/audio/: OpusDecoder.kt
android/app/src/main/java/com/audiobridge/app/codec/: OpusBridge.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: themes.xml
doc/: API.md  audio-packet.md  bugfix-android-audio.md  bugfix-audio-quality-stability.md  bugfix-sample-rate-resampling.md  bugfix-websocket-1006.md  bugfix-websocket-connection.md  bugfix-websocket-middleware.md  control.json  web-audio-issues-analysis.md  web-debugging-guide.md  web-development-summary.md  web-player.md  web-quickstart.md  web-testing.md
scripts/: build-android.ps1  build.ps1  setup.ps1
tools/: build-all.bat
windows/: AudioBridge.Windows.sln
windows/App/: App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
windows/App/Audio/: AudioResampler.cs  LoopbackCapture.cs  OpusEncoderWrapper.cs
windows/App/Config/: Settings.cs
windows/App/Media/: MediaController.cs
windows/App/Net/: ControlServer.cs  Crypto.cs  MdnsPublisher.cs  QrHelper.cs  UdpAudioSender.cs  WebAudioStreamer.cs
windows/App/wwwroot/: audio-player.js
(+5 files in other folders)
